feat(send_message retry) & test(cleanup table helper)

--- a/config/config.test.yaml
+++ b/config/config.test.yaml
@@ -4,3 +4,7 @@ database:
 jwt:
   secret: "test-secret-key"
   expiration: 24h  # 支持时间单位：h(小时)、m(分钟)、s(秒)
+
+websocket:
+  message_retry_count: 3 # 重试次数
+  message_retry_interval_ms: 50 # 重试间隔（毫秒）
